fix corruption of startupconfig(files) in Qt5.6

BUG: 351609
REVIEW: 124877